--- a/Date/2023.04/TIL_2023_04_05.md
+++ b/Date/2023.04/TIL_2023_04_05.md
@@ -29,7 +29,7 @@
 
 ## 1.2 멘토링
 
-# 멘토링이 시작되고 이론 공부에 대한 발표를 했을 때 오늘은 평소보다는 좀 더 간결하게 이야기하려고 노력했다. 매주 이론 공부에 대한 발표를 하면 질문을 받는다. 그럼 다시 대답하고 그러다가 질문에 대한 대답을 하지 못하는 순간이 온다. 그 지점에서 멘토님은 추가적으로 어떤 방향으로 공부하면 좋을지에 대해 알려준다. 그럼 이제 방향을 잘 잡아서 공부하면 된다.
+멘토링이 시작되고 이론 공부에 대한 발표를 했을 때 오늘은 평소보다는 좀 더 간결하게 이야기하려고 노력했다. 매주 이론 공부에 대한 발표를 하면 질문을 받는다. 그럼 다시 대답하고 그러다가 질문에 대한 대답을 하지 못하는 순간이 온다. 그 지점에서 멘토님은 추가적으로 어떤 방향으로 공부하면 좋을지에 대해 알려준다. 그럼 이제 방향을 잘 잡아서 공부하면 된다.
 
 오늘도 그렇게 이론 공부 발표가 끝나고, 프로젝트를 마무리하면서 프로젝트에서 궁금한 이야기를 물어봤고 그 부분에 대한 이야기가 오고 갔다. 
 
