TIL, TIW: 2023.06.26 TIL, TIW
* TIL
인턴쉽 강의 듣고, 1만 시간 법칙 페이지 구현 끝내고
useEffect, useMemo, useCallback에 대해 공부했다.

* TIW
주로 useEffect에 대한 궁금증..

--- a/Date/2023.06/TIL_2023_06_25.md
+++ b/Date/2023.06/TIL_2023_06_25.md
@@ -1,7 +1,6 @@
 # TIL_2023_06_25
 
-<aside>
-<img src="https://noticon-static.tammolo.com/dgggcrkxq/image/upload/v1570106347/noticon/hx52ypkqqdzjdvd8iaid.svg" alt="https://noticon-static.tammolo.com/dgggcrkxq/image/upload/v1570106347/noticon/hx52ypkqqdzjdvd8iaid.svg" width="40px" /> Today 요약
+### Today 요약
 
 1. 커밋 메세지
 2. peerDependencies
@@ -9,27 +8,25 @@
 
 ---
 
-</aside>
-
-# ***1. What I did?***
+# **_1. What I did?_**
 
 ## 1.1 멘토님 피드백 답변하기
 
 오랜만에 멘토님의 촌철살인 피드백을 받다보니까 긴장감이 돌았다. 한 편으로는 재미있기도 하다. 진짜로 금전적인 부분만 괜찮다고 한다면 계속 멘토링을 지속하고 싶다.
 
-하지만 금전적인 부분을 생각 안할 수가 없다. 그러니 정해진 기간안에 최선을 다해야 한다. 한 가지 아쉬운 건 피드백의 주기가 조금만 더 짧았으면 하는 바램이다. 일주일에 두 번 정도? 금요일에 한 번 월요일에 한 번 이렇게 피드백 주시면 좋을 것 같은데.. 그건 나중에 한 번 물어보자. 
+하지만 금전적인 부분을 생각 안할 수가 없다. 그러니 정해진 기간안에 최선을 다해야 한다. 한 가지 아쉬운 건 피드백의 주기가 조금만 더 짧았으면 하는 바램이다. 일주일에 두 번 정도? 금요일에 한 번 월요일에 한 번 이렇게 피드백 주시면 좋을 것 같은데.. 그건 나중에 한 번 물어보자.
 
-아무튼 사전과제로 진행한 프로젝트에 대해서 많은 피드백을 받았고 오늘은 그 부분에 대해서 최대한 상세하게 답변해봤다. 
+아무튼 사전과제로 진행한 프로젝트에 대해서 많은 피드백을 받았고 오늘은 그 부분에 대해서 최대한 상세하게 답변해봤다.
 
-# *2. What I Learned?*
+# _2. What I Learned?_
 
 ## 2.1 커밋 메세지
 
-커밋 메세지를 여러 줄로 상세하게 작성하는 방법에 대해 알아봤다. 맨날 CLI로 작성하다 보니까 한 줄로만 작성하는 습관이 생겼었는데, CLI로도 여러 줄 작성할 수 있는데다가 vscode에서도 커밋 메세지를 등록할 수 있기 때문에 당분간은 커밋 메세지를 최대한 상세하게 작성하려고 한다. 
+커밋 메세지를 여러 줄로 상세하게 작성하는 방법에 대해 알아봤다. 맨날 CLI로 작성하다 보니까 한 줄로만 작성하는 습관이 생겼었는데, CLI로도 여러 줄 작성할 수 있는데다가 vscode에서도 커밋 메세지를 등록할 수 있기 때문에 당분간은 커밋 메세지를 최대한 상세하게 작성하려고 한다.
 
 ## 2.2 peerDependencies
 
-오늘은 peerDependencies라는 개념에 대해 공부했다. pacakage.json에서 사용하는 옵션이다. 기존에 사용했던 devDependencies나 dependencies와는 또 다른 개념이다. 그냥 넘어갈까 하다가 어느 정도는 알고 있으면 나중에 도움될 것 같아서 머릿 속에 개념 정리하고자 알아봤다. 일단 내가 이해한 바로는 라이브러리 끼리 호환성을 지키기 위해 명시해주는 옵션 같은 거라고 이해했다. peerDenpendencies에 어떤 버전이 명시되어 있는 라이브러리를 다른 곳에 설치했을 때 기존에 설치하는 곳의 라이브러리와 설치하는 라이브러리의 버전이 다르다면 오류가 발생한다. 
+오늘은 peerDependencies라는 개념에 대해 공부했다. pacakage.json에서 사용하는 옵션이다. 기존에 사용했던 devDependencies나 dependencies와는 또 다른 개념이다. 그냥 넘어갈까 하다가 어느 정도는 알고 있으면 나중에 도움될 것 같아서 머릿 속에 개념 정리하고자 알아봤다. 일단 내가 이해한 바로는 라이브러리 끼리 호환성을 지키기 위해 명시해주는 옵션 같은 거라고 이해했다. peerDenpendencies에 어떤 버전이 명시되어 있는 라이브러리를 다른 곳에 설치했을 때 기존에 설치하는 곳의 라이브러리와 설치하는 라이브러리의 버전이 다르다면 오류가 발생한다.
 
 예전에 강의를 참고해서 코드를 따라 치면서 공부하다가 리액트 프로젝트에서 어떤 라이브러리를 설치할 때 강의와 똑같은 명령어를 입력해서 프로젝트를 시도했지만 버전이 맞지 않아 계속 오류가 발생한 적이 잇었다. 아마 강의는 1년 전 강의라 지금 최신 버전이 아니기 때문에 지금 최신 버전과 다른 라이브러리의 버전이 맞질 않아서 생긴 오류이지 않았을까 생각한다. 그때 그 라이브러리에 peerDependencies가 정의되어 있었을 거라 추측된다. 그렇기 때문에 버전이 맞지 않으면 오류를 발생시키고 버전을 맞춰서 설치하라고 메세지가 뜬거라고 생각한다.
 
@@ -37,17 +34,17 @@
 
 ## 2.3 useEffect
 
-일단 오늘 까지 알아본 useEffect은 useEffect에 전달한 콜백 함수를 렌더링 후에 실행시키게 된다. 그리고 두 번째 인자로 전달한 의존성 배열이 변경사항이 감지되면 다시 호출된다. 이때 의존성 배열에 아무 것도 전달하지 않으면 처음 렌더링 하고 난 뒤 콜백함수만 호출하게 된다. 
+일단 오늘 까지 알아본 useEffect은 useEffect에 전달한 콜백 함수를 렌더링 후에 실행시키게 된다. 그리고 두 번째 인자로 전달한 의존성 배열이 변경사항이 감지되면 다시 호출된다. 이때 의존성 배열에 아무 것도 전달하지 않으면 처음 렌더링 하고 난 뒤 콜백함수만 호출하게 된다.
 
-따라서 이런 특징을 잘 알고 적절핳게 사용해야 한다. 
+따라서 이런 특징을 잘 알고 적절핳게 사용해야 한다.
 
-# *3. What I curious?*
+# _3. What I curious?_
 
-[TIW_2023_06_25](https://www.notion.so/TIW_2023_06_25-0acc154d9b0a47a6a1098b5eec637e68?pvs=21) 
+[TIW_2023_06_25](https://www.notion.so/TIW_2023_06_25-0acc154d9b0a47a6a1098b5eec637e68?pvs=21)
 
 ---
 
-# *회고(Retrospective)*
+# _회고(Retrospective)_
 
 ## 5F
 
@@ -55,14 +52,14 @@
 💡 5F (전체 회고)
 
 - **Fact** (사실: 무슨 일이 있었나?)
-    - 이번주에는 제대로 집중한 것 같다. 요새는 하루 평균 8시간은 공부하는 것 같다. 집중도 평소보다 잘 되고 개발이 좀 더 재미있어졌다.
+  - 이번주에는 제대로 집중한 것 같다. 요새는 하루 평균 8시간은 공부하는 것 같다. 집중도 평소보다 잘 되고 개발이 좀 더 재미있어졌다.
 - **Feeling** (느낌: 무슨 느낌이 들었나?)
-    - 그냥 이대로 꾸준히 하면 정말 취업 가능하지 않을까? 하는 자신감이 조금씩 붙고 있고 그러면서 자존감도 올라가고 있는 것 같다. 나름 이 부분때문에 좀 더 행복해진 듯 하다.ㅋㅋ
+  - 그냥 이대로 꾸준히 하면 정말 취업 가능하지 않을까? 하는 자신감이 조금씩 붙고 있고 그러면서 자존감도 올라가고 있는 것 같다. 나름 이 부분때문에 좀 더 행복해진 듯 하다.ㅋㅋ
 - **Finding** (배운 점: 어떤 인사이트를 얻었나?
-    - 올바른 방법과 노력(꾸준히 노력하는 시간) 적절한 피드백이 적당한 주기로 반복된다면 빠른 성장이 이루어진다.
+  - 올바른 방법과 노력(꾸준히 노력하는 시간) 적절한 피드백이 적당한 주기로 반복된다면 빠른 성장이 이루어진다.
 - **Future action** (향후 행동: 앞으로 무엇을 해야 할까?)
-    - 계속 이대로 뭔가 많은 결과물을 내는 것보다는 많은 고민을 하고 많이 기록하고 내가 계속 왜 이런 코드를 작성했는지를 생각하면서 코딩하자.
+  - 계속 이대로 뭔가 많은 결과물을 내는 것보다는 많은 고민을 하고 많이 기록하고 내가 계속 왜 이런 코드를 작성했는지를 생각하면서 코딩하자.
 - **Feedback** (피드백: 앞서 정한 향후 행동을 실천해본 뒤, 이에 대해 어떤 피드백을 받았나?)
-    - 주로 진행한 프로젝트의 코드 퀄리티에 대한 피드백을 많이 받았다. 다른 부분에 대한 건 멘토링 시간에 피드백 받아보자. (공부방법, 취업 등등)
-    
+  - 주로 진행한 프로젝트의 코드 퀄리티에 대한 피드백을 많이 받았다. 다른 부분에 대한 건 멘토링 시간에 피드백 받아보자. (공부방법, 취업 등등)
+
 </aside>
